[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprite.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Overlay" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 84, 0 )

[node name="CentreButtonControl" type="Control" parent="Overlay"]
margin_right = 127.0
margin_bottom = 40.0

[node name="CentreButton" type="Button" parent="Overlay/CentreButtonControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5
margin_top = -10.0
margin_right = 52.5
margin_bottom = 10.0
text = "Back to Centre"

[node name="AutoMoveControl" type="Control" parent="Overlay"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -95.0
margin_bottom = 43.0

[node name="AutoMoveCheckbox" type="CheckBox" parent="Overlay/AutoMoveControl"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -11.5
margin_right = 87.0
margin_bottom = 12.5
text = "Auto Move"

[node name="VerticalDir" type="Control" parent="Overlay/AutoMoveControl"]
visible = false
margin_left = -4.0
margin_top = 35.0
margin_right = 88.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( -220, 16 )

[node name="VSlider" type="VSlider" parent="Overlay/AutoMoveControl/VerticalDir"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -27.0
margin_right = -11.0
margin_bottom = 60.0
max_value = 1.0
value = 1.0

[node name="Label" type="Label" parent="Overlay/AutoMoveControl/VerticalDir"]
margin_left = 37.0
margin_top = 2.0
margin_right = 77.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 20, 10 )
text = "Up"

[node name="Label2" type="Label" parent="Overlay/AutoMoveControl/VerticalDir"]
margin_left = 37.0
margin_top = 45.0
margin_right = 77.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 20, 10 )
text = "Down"

[node name="HorizontalDir" type="Control" parent="Overlay/AutoMoveControl"]
visible = false
margin_left = -4.0
margin_top = 111.0
margin_right = 88.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( -220, 16 )

[node name="HSlider" type="HSlider" parent="Overlay/AutoMoveControl/HorizontalDir"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -52.0
margin_top = -19.0
margin_right = 27.0
margin_bottom = 41.0
min_value = -1.0
max_value = 1.0
step = 2.0
value = 1.0

[node name="Label" type="Label" parent="Overlay/AutoMoveControl/HorizontalDir"]
margin_left = 50.0
margin_top = 20.0
margin_right = 90.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 20, 10 )
text = "Right"

[node name="Label2" type="Label" parent="Overlay/AutoMoveControl/HorizontalDir"]
margin_left = -9.0
margin_top = 20.0
margin_right = 31.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 20, 10 )
text = "Left"

[node name="ChangeImageButtonControl" type="Control" parent="Overlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -39.0
margin_right = 39.0
margin_bottom = 40.0

[node name="ChangeImageButton" type="Button" parent="Overlay/ChangeImageButtonControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -51.0
margin_top = -10.0
margin_right = 51.0
margin_bottom = 10.0
text = "Change Image"

[node name="BottomControls" type="GridContainer" parent="Overlay"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -34.0
columns = 2

[node name="Speed" type="GridContainer" parent="Overlay/BottomControls"]
margin_right = 510.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpeedSlider" type="HSlider" parent="Overlay/BottomControls/Speed"]
margin_right = 510.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 1000.0
step = 10.0

[node name="SpeedLabel" type="Label" parent="Overlay/BottomControls/Speed"]
margin_top = 20.0
margin_right = 510.0
margin_bottom = 34.0
text = "Speed: "
align = 1
valign = 1

[node name="AngularSpeed" type="GridContainer" parent="Overlay/BottomControls"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AngularSpeedSlider" type="HSlider" parent="Overlay/BottomControls/AngularSpeed"]
margin_right = 510.0
margin_bottom = 16.0
size_flags_horizontal = 3
max_value = 10.0
step = 0.1

[node name="AngularSpeedLabel" type="Label" parent="Overlay/BottomControls/AngularSpeed"]
margin_top = 20.0
margin_right = 510.0
margin_bottom = 34.0
text = "Angular Speed: "
align = 1
valign = 1

[node name="FileDialog" type="FileDialog" parent="Overlay"]
margin_left = 49.0
margin_top = 50.0
margin_right = 949.0
margin_bottom = 550.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
current_dir = "/"
current_path = "/"

[node name="ImageError" type="PopupDialog" parent="Overlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -95.0
margin_top = 41.0
margin_right = 96.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="Overlay/ImageError"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.5
margin_top = -7.0
margin_right = 73.5
margin_bottom = 7.0
text = "Please select an image"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="Overlay/CentreButtonControl/CentreButton" to="Sprite" method="_on_CentreButton_pressed"]
[connection signal="toggled" from="Overlay/AutoMoveControl/AutoMoveCheckbox" to="Sprite" method="_on_AutoMoveCheckbox_toggled"]
[connection signal="value_changed" from="Overlay/AutoMoveControl/VerticalDir/VSlider" to="Sprite" method="_on_VSlider_value_changed"]
[connection signal="value_changed" from="Overlay/AutoMoveControl/HorizontalDir/HSlider" to="Sprite" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="Overlay/ChangeImageButtonControl/ChangeImageButton" to="." method="_on_ChangeImageButton_pressed"]
[connection signal="value_changed" from="Overlay/BottomControls/Speed/SpeedSlider" to="." method="_on_SpeedSlider_value_changed"]
[connection signal="value_changed" from="Overlay/BottomControls/AngularSpeed/AngularSpeedSlider" to="." method="_on_AngularSpeedSlider_value_changed"]
[connection signal="file_selected" from="Overlay/FileDialog" to="Sprite" method="_on_FileDialog_file_selected"]
[connection signal="timeout" from="Timer" to="Sprite" method="_on_Timer_timeout"]
